--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.1",
+        "axios": "^1.4.0",
         "daisyui": "^2.52.0",
+        "dotenv": "^16.1.4",
         "lottie-react": "^2.4.0",
         "react": "^18.2.0",
         "react-daisyui": "^3.1.2",
