--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.13.4",
+        "@mui/styled-engine-sc": "^5.12.0",
+        "@mui/styles": "^5.13.2",
+        "@mui/x-data-grid": "^6.7.0",
         "@reduxjs/toolkit": "^1.9.1",
         "axios": "^1.4.0",
         "daisyui": "^2.52.0",
@@ -22,8 +28,10 @@
         "react-redux": "^8.0.5",
         "react-router": "^6.11.2",
         "react-router-dom": "^6.11.2",
+        "react-toastify": "^9.1.3",
         "redux": "^4.2.0",
-        "sass": "^1.62.1"
+        "sass": "^1.62.1",
+        "styled-components": "^6.0.0-rc.3"
     },
     "devDependencies": {
         "@types/react": "^18.0.28",
@@ -37,5 +45,9 @@
         "postcss": "^8.4.24",
         "tailwindcss": "^3.3.2",
         "vite": "^4.3.2"
+    },
+    "peerDependencies": {
+        "react": "^17.0.0 || ^18.0.0",
+        "react-dom": "^17.0.0 || ^18.0.0"
     }
 }
