--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "daisyui": "^2.52.0",
         "dotenv": "^16.1.4",
         "lottie-react": "^2.4.0",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-daisyui": "^3.1.2",
         "react-dom": "^18.2.0",
