--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.11.16",
+        "@mui/lab": "^5.0.0-alpha.137",
         "@mui/material": "^5.13.5",
         "@mui/styled-engine-sc": "^5.12.0",
         "@mui/styles": "^5.13.2",
         "@mui/x-data-grid": "^6.7.0",
+        "@mui/x-date-pickers": "^6.10.1",
         "@reduxjs/toolkit": "^1.9.1",
         "axios": "^1.4.0",
         "daisyui": "^2.52.0",
@@ -34,7 +36,8 @@
         "react-toastify": "^9.1.3",
         "redux": "^4.2.0",
         "sass": "^1.62.1",
-        "styled-components": "^6.0.0-rc.3"
+        "styled-components": "^6.0.0-rc.3",
+        "tw-elements": "^1.0.0-beta2"
     },
     "devDependencies": {
         "@types/react": "^18.0.28",
