--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
         "dotenv": "^16.1.4",
         "lottie-react": "^2.4.0",
         "moment": "^2.29.4",
-        "react": "^18.2.0",
+        "react": "^17.0.0 || ^18.0.0",
         "react-daisyui": "^3.1.2",
-        "react-dom": "^18.2.0",
+        "react-dom": "^17.0.0 || ^18.0.0",
         "react-icons": "^4.8.0",
         "react-photo-view": "^1.2.3",
         "react-redux": "^8.0.5",
@@ -36,6 +36,7 @@
         "react-toastify": "^9.1.3",
         "redux": "^4.2.0",
         "sass": "^1.62.1",
+        "socket.io-client": "^4.7.2",
         "styled-components": "^6.0.0-rc.3",
         "tw-elements": "^1.0.0-beta2"
     },
